Add character endpoint (needs working bnet-api)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,7 @@
                 <input type='radio' name='endpoint' value='wow/m2' id='m2endpoint' CHECKED><label for='m2endpoint'>M2</label>
                 <input type='radio' name='endpoint' value='wow/wmo' id='wmoendpoint'><label for='wmoendpoint'>WMO</label>
                 <input type='radio' name='endpoint' value='wow/maps' id='mapendpoint'><label for='mapendpoint'>Map</label>
+                <input type='radio' name='endpoint' value='wow/character' id='characterendpoint'><label for='characterendpoint'>Char</label>
                 <!--
                 <input type='radio' name='endpoint' value='wow/creature' id='creatureendpoint'><label for='creatureendpoint'>Creature</label>
                 <input type='radio' name='endpoint' value='wow/creatureDisplayInfo' id='cdiendpoint'><label for='cdiendpoint'>CDI</label>
